correccion modal y styling

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
-    background-image: url(../assets/Aprilia-RS-660-Trofeo-3-scaled.jpg); 
-    background-size: contain;
+    background-image: url(../assets/Aprilia-RS-660-Trofeo-3-scaled.jpg);
     color: white;
     font-size: 20px;
 }
@@ -33,7 +32,8 @@ body {
 }
 
 #potencia-usuario {
-    font-size: 12px;
+    font-size: 18px;
+    text-align: center;
 }
 
 .info-hp {
@@ -41,8 +41,8 @@ body {
     align-items: center;
     margin-left: 25%;
     margin-right: 28%;
-    background-color: rgb(0, 0, 0, 0.7);
 }
+
 /* --------------------------- */
 .clear-button {
     font-size: 15px;
@@ -63,7 +63,8 @@ body {
     outline: none;
 }
 
-#cart-button {
+#cart-button,
+#emptyCart {
     border: none;
     font-size: 20px;
     color: rgb(255, 132, 0);
@@ -73,7 +74,8 @@ body {
     transition: all .3s;
 }
 
-#cart-button:hover {
+#cart-button:hover,
+#emptyCart:hover {
     cursor: pointer;
     color: rgb(0, 0, 0, 0.7);
     background-color: rgb(255, 132, 0);
@@ -97,14 +99,14 @@ body {
     transition: all .5s;
     opacity: 0;
     visibility: hidden;
-   
+
 }
 
 .modal-active {
     opacity: 1;
     visibility: visible;
     color: black;
-    
+
 }
 
 .modal-active .cart-modal {
@@ -118,8 +120,6 @@ body {
     padding: 20px;
     margin-top: -100%;
     transition: all .5s;
-    /* z-index: 10000; */
-
 }
 
 
@@ -225,7 +225,7 @@ img {
     align-items: center;
     padding: 10px 10%;
     box-shadow: 0px 5px 4px 3px rgba(0, 0, 0, 0.3);
-    margin-bottom: 20px;
+    margin-bottom: 2px;
     background: linear-gradient(90deg, rgb(250, 76, 6) 30%, rgb(0, 0, 0) 70%);
 }
 
@@ -275,47 +275,40 @@ p {
 /*--------------------------------------*/
 
 /* Modal */
-.modal-container-welcome{
-background-image: url(./assets/welcomeBg.png);
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
-background-attachment: inherit;
-width: 100%;
-min-height: 100vh;
-background-color: #000;
-position: fixed;
-top: 0;
-left: 0;
-display: flex;
-justify-content: center;
-align-items: center;
-opacity: 0;
-visibility: hidden;
-transition: .3s all ease-in;
+.modal-container-welcome {
+    width: 100%;
+    min-height: 100vh;
+    background-color: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: .7s all ease-in;
 }
 
-.modal-container-welcome--visible{
-opacity: 1;
-visibility: visible;
+.modal-container-welcome--visible {
+    opacity: 1;
+    visibility: visible;
 }
+
 .welcomemodal {
-margin: 0 auto;
-background: url(../assets/Aprilia-RS-660-Trofeo-3-scaled.jpg);
-background-position: center;
-background-clip: unset;
-background-size: cover;
-background-repeat: no-repeat;
-background-attachment: inherit;
-width: 350px;
-height: 350px;
-border-radius: 50%;
-color: rgb(0, 81, 202);
-text-shadow: #f0f0f2;
-font-weight: bold;
-letter-spacing: .15rem;
-padding: 10px;
+    margin: 0 auto;
+    background-color: black;
+    background-position: center;
+    width: 350px;
+    height: 350px;
+    border-radius: 50%;
+    color: orange;
+    text-shadow: black;
+    font-weight: bold;
+    letter-spacing: .15rem;
+    padding: 10px;
 }
+
 .input-modal {
     display: flex;
     justify-content: center;
@@ -323,14 +316,8 @@ padding: 10px;
     font-size: 15px;
     width: auto;
     margin: 0 auto;
-    margin-top: 30px; 
+    margin-top: 30px;
 }
-.btn-modal {
-    margin-top: 10px;
-    color: #5fb0cb;
-    width: 200px;
-}
-
 
 .close-modal {
     font-weight: bolder;
@@ -339,28 +326,42 @@ padding: 10px;
     padding: 0.2rem 0.9rem;
     margin-bottom: 1rem;
     border-radius: 50%;
-  }
+}
+
+.statements {
+    display: flex;
+    padding: 10px 10%;
+    background: linear-gradient(90deg, rgb(250, 76, 6) 30%, rgb(0, 0, 0) 70%);
+}
 
 #load-parts {
     display: flex;
     align-items: center;
     justify-content: center;
     color: rgb(255, 132, 0);
-    border-radius: 100px;
+    background-color: rgb(63, 63, 63, 0.7);
+    border-radius: 5%;
     cursor: pointer;
     padding: 7px 20px;
     text-align: center;
     text-decoration: none;
     border: 0;
-    width: 200px;
+    width: 150px;
     font-size: 20px;
     font-weight: 600;
     user-select: none;
     margin: 0 auto;
     touch-action: manipulation;
 }
+
+#load-parts:hover {
+    color: rgb(63, 63, 63, 0.7);
+    background-color: rgb(255, 132, 0);
+}
+
 #clear-power {
     border: none;
+    font-weight: bold;
     font-size: 10px;
     color: rgb(255, 132, 0);
     background-color: rgb(63, 63, 63, 0.7);
@@ -371,25 +372,29 @@ padding: 10px;
 
 #clear-power:hover {
     cursor: pointer;
+    font-weight: bold;
     background-color: rgb(255, 132, 0);
     color: rgb(63, 63, 63, 0.7);
 }
 
 .btn-modal {
+    width: 300px;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 10px;
+    font-size: 12px;
+    background-color: rgb(255, 255, 255);
     color: rgb(255, 132, 0);
-    border-radius: 100px;
+    border-radius: 5px;
     cursor: pointer;
-    padding: 7px 20px;
-    text-align: center;
+    padding: 7px 30px;
     text-decoration: none;
+    text-transform: uppercase;
     border: 0;
-    width: 200px;
-    font-weight: 600;
-    user-select: none;
-    margin: 0 auto;
-    touch-action: manipulation;
+    width: 60%;
+    font-weight: bold;
+    margin: 20px auto;
+}
+
+.btn-modal:hover {
+    color: rgba(0, 0, 0, 0.8);
+    background-color: rgb(255, 132, 0);
 }
