--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,43 @@
 body {
     background-image: url(../assets/Aprilia-RS-660-Trofeo-3-scaled.jpg);
-    background-size:contain;
+    background-size: cover;
     color: white;
     font-size: 20px;
 }
 
 #item-container {
-    max-width: 1200px;
-    margin: 60px auto;
+    opacity: 95%;
+    width: 80%;
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    margin: 8% 5% 2% 5%;
+    width: 90%;
+    max-height: 100%;
+    background-color: black;
+    gap: 2px;
+    overflow-x: scroll;
+    border: 2px solid white;
+    visibility: visible;
+}
+
+#item-container::-webkit-scrollbar {
+    display: none;
 }
 
 .accesory {
-    color: orange;
-    background-color: rgba(0, 0, 0, 0.8);
-    max-width: 25%;
-    padding: 5px;
+    color: rgb(0, 0, 0);
+    background-color: rgb(213, 212, 205);
+    min-width: 15%;
+    padding: 2px;
     margin-bottom: 20px;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
     text-align: center;
+    text-transform: uppercase;
 }
 
 .accesory-img {
-    max-width: 100%;
+    min-width: 100%;
+    max-height: 240px;
+    border-radius: 10px;
 }
 
 #initial-power {
@@ -68,8 +81,8 @@ body {
 #emptyCart {
     border: none;
     font-size: 20px;
-    color: rgb(255, 132, 0);
-    background-color: rgb(63, 63, 63, 0.7);
+    color: rgb(213, 212, 205);
+    background-color: rgb(65, 132, 225);
     border-radius: 5%;
     padding: 10px 20px;
     transition: all .3s;
@@ -78,8 +91,9 @@ body {
 #cart-button:hover,
 #emptyCart:hover {
     cursor: pointer;
-    color: rgb(0, 0, 0, 0.7);
-    background-color: rgb(255, 132, 0);
+    color: rgb(65, 132, 225);
+    background-color: aliceblue;
+    box-shadow: 1px 1px 1px 1px black;
 }
 
 #cart-button:focus {
@@ -227,7 +241,7 @@ img {
     padding: 10px 10%;
     box-shadow: 0px 5px 4px 3px rgba(0, 0, 0, 0.3);
     margin-bottom: 2px;
-    background: linear-gradient(90deg, rgb(250, 76, 6) 30%, rgb(0, 0, 0) 70%);
+    background: linear-gradient(90deg, rgb(65, 132, 225) 30%, rgb(255, 255, 255) 70%);
 }
 
 
@@ -243,19 +257,18 @@ p {
 }
 
 .add {
-    color: rgb(255, 132, 0);
-    background-color: rgb(63, 63, 63, 0.7);
+    color: rgb(255, 255, 255);
+    background-color: rgb(65, 132, 225);
     font-size: 15px;
     padding: 5px;
-    box-shadow: 1px 1px 3px 1px rgba(255, 255, 255, 0.3);
     text-transform: uppercase;
     border: none;
+    border-radius: 5px;
 }
 
 .add:hover {
     cursor: pointer;
-    color: rgb(0, 0, 0, 0.7);
-    background-color: rgb(255, 132, 0);
+    background-color: rgb(47, 72, 140);
     transition: all 0.5s;
 }
 
@@ -298,12 +311,12 @@ p {
 
 .welcomemodal {
     margin: 0 auto;
-    background-color: black;
+    background-color: rgb(233, 233, 233);
     background-position: center;
-    width: 350px;
-    height: 350px;
-    border-radius: 50%;
-    color: orange;
+    width: 300px;
+    height: 200px;
+    border-radius: 5%;
+    color: black;
     text-shadow: black;
     font-weight: bold;
     letter-spacing: .15rem;
@@ -330,42 +343,35 @@ p {
 }
 
 .statements {
+    color: black;
     display: flex;
     padding: 10px 10%;
-    background: linear-gradient(90deg, rgb(250, 76, 6) 30%, rgb(0, 0, 0) 70%);
+    background: linear-gradient(90deg, rgb(65, 132, 225) 30%, rgb(255, 255, 255) 70%);
 }
 
 #load-parts {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: rgb(255, 132, 0);
-    background-color: rgb(63, 63, 63, 0.7);
-    border-radius: 5%;
-    cursor: pointer;
-    padding: 7px 20px;
-    text-align: center;
-    text-decoration: none;
-    border: 0;
-    width: 150px;
-    font-size: 20px;
-    font-weight: 600;
-    user-select: none;
-    margin: 0 auto;
     touch-action: manipulation;
+    border: none;
+    font-size: 20px;
+    color: rgb(213, 212, 205);
+    background-color: rgb(65, 132, 225);
+    border-radius: 5%;
+    padding: 10px 20px;
+    transition: all .3s;
 }
 
 #load-parts:hover {
-    color: rgb(63, 63, 63, 0.7);
-    background-color: rgb(255, 132, 0);
+    cursor: pointer;
+    color: rgb(65, 132, 225);
+    background-color: aliceblue;
+    box-shadow: 1px 1px 1px 1px black;
 }
 
 #clear-power {
     border: none;
-    font-weight: bold;
-    font-size: 10px;
-    color: rgb(255, 132, 0);
-    background-color: rgb(63, 63, 63, 0.7);
+    font-size: 20px;
+    color: rgb(213, 212, 205);
+    background-color: rgb(65, 132, 225);
     border-radius: 5%;
     padding: 10px 20px;
     transition: all .3s;
@@ -373,9 +379,9 @@ p {
 
 #clear-power:hover {
     cursor: pointer;
-    font-weight: bold;
-    background-color: rgb(255, 132, 0);
-    color: rgb(63, 63, 63, 0.7);
+    color: rgb(65, 132, 225);
+    background-color: aliceblue;
+    box-shadow: 1px 1px 1px 1px black;
 }
 
 .btn-modal {
